[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-jobspy"
version = "1.0.0"
authors = [
    {name = "Abhilash RS", email = "your.email@example.com"},
]
description = "A Python package for scraping job listings from LinkedIn"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "linkedin",
    "jobs-scraper", 
    "web-scraping",
    "job-search",
    "data-analysis",
    "career",
    "recruitment"
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.1.0",
    "numpy>=1.26.3",
    "pydantic>=2.3.0",
    "tls-client>=1.0.1",
    "markdownify>=1.1.0",
    "regex>=2024.4.28",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "black",
    "pre-commit",
    "pytest>=7.0.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/A6h9lash/linkedin-jobspy"
Documentation = "https://github.com/A6h9lash/linkedin-jobspy#readme"
Repository = "https://github.com/A6h9lash/linkedin-jobspy"
"Bug Reports" = "https://github.com/A6h9lash/linkedin-jobspy/issues"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
